# KiraWavTar

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  KiraWavTar.pro  README.md  dirnameeditwithbrowse.cpp  dirnameeditwithbrowse.h  external-libs_template.pri  extracttargetselectmodel.cpp  extracttargetselectmodel.h  kfr_adapt.h  lambda_wrapper.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  wavcombine.cpp  wavcombine.h  wavcombinedialog.cpp  wavcombinedialog.h  wavextract.cpp  wavextract.h  wavextractdialog.cpp  wavextractdialog.h  wavformatchooserwidget.cpp  wavformatchooserwidget.h  wavformatchooserwidget.ui  wavtar_utils.cpp  wavtar_utils.h
.claude/skills/qt-translator/: SKILL.md  ts-format-reference.md
assets/: KiraWavTar.icns
docs/: BUILD.md  CODING_STYLE.md
lib/KiraCommonUtils/: CMakeLists.txt
lib/KiraCommonUtils/lib/diff-match-patch/: diff_match_patch.cpp  diff_match_patch.h
lib/KiraCommonUtils/src/: darkmode.cpp
lib/KiraCommonUtils/src/i18n/: translationmanager.cpp
lib/KiraCommonUtils/src/include/kira/i18n/: translationmanager.h
lib/KiraCommonUtils/src/include/kira/lib_helper/: fplus_qt_adapter.h
lib/KiraCommonUtils/src/widgets/: dirnameeditwithbrowse.cpp  filenameeditwithbrowse.cpp
lib/kfr/: CMakeLists.txt
lib/kfr/include/kfr/: cometa.hpp
lib/kfr/include/kfr/io/: audiofile.hpp
lib/kfr/include/kfr/io/dr/: dr_wav.h
lib/kfr/include/kfr/simd/: vec.hpp
scripts/: installer-windows.iss  package-macos.sh
src/: AudioIO.cpp  AudioIO.h  CMakeLists.txt  CommonHtmlDialog.cpp  CommonHtmlDialog.h  DirNameEditWithBrowse.cpp  ExtractTargetSelectModel.cpp  FileNameEditWithBrowse.cpp  Filesystem.cpp  Filesystem.h  KfrHelper.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ShowHTMLDialog.cpp  ShowHTMLDialog.h  Translation.cpp  TranslationManager.cpp  TranslationManager.h  UpdateChecker.cpp  UpdateChecker.h  Utils.cpp  WavCombine.cpp  WavCombine.h  WavCombineDialog.cpp  WavCombineDialog.h  WavExtract.cpp  WavExtract.h  WavExtractDialog.cpp  WavExtractDialog.h  WavFormatChooserWidget.cpp  WavFormatChooserWidget.h  WavTarUtils.cpp  WavTarUtils.h  app.rc.in  extracttargetselectmodel.cpp  filenameeditwithbrowse.cpp  filenameeditwithbrowse.h  kfr_adapt.h  (+19 more)
src/resources/: icon.ai  icon.qrc
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ui/dialogs/: CMakeLists.txt  CommonHtmlDialog.cpp  CommonHtmlDialog.h  CommonHtmlDialog.ui  EngineSettingsDialog.cpp  EngineSettingsDialog.h  WavCombineDialog.cpp  WavCombineDialog.h  WavExtractDialog.cpp  WavExtractDialog.h
src/ui/models/: CMakeLists.txt  ExtractTargetSelectModel.cpp  ExtractTargetSelectModel.h
src/ui/widgets/: CMakeLists.txt  DirNameEditWithBrowse.cpp  DirNameEditWithBrowse.h  FileNameEditWithBrowse.cpp  FileNameEditWithBrowse.h  FileNameEditWithBrowse.ui  RemoteImageTextBrowser.cpp  RemoteImageTextBrowser.h  WavFormatChooserWidget.cpp  WavFormatChooserWidget.h  WavFormatChooserWidget.ui
src/utils/: CMakeLists.txt  Filesystem.cpp  Filesystem.h  KfrHelper.h  Translation.cpp  Translation.h  TranslationManager.cpp  TranslationManager.h  UpdateChecker.cpp  UpdateChecker.h  Utils.cpp  Utils.h
src/worker/: AudioCombine.cpp  AudioCombine.h  AudioExtract.cpp  AudioExtract.h  AudioIO.cpp  AudioIO.h  CMakeLists.txt  WavCombine.cpp  WavCombine.h  WavExtract.cpp  WavExtract.h
translations/: KiraWavTar_en.ts  KiraWavTar_ja_JP.ts  KiraWavTar_zh_CN.ts  KiraWavTar_zh_TW.ts
translations/ja-JP/: ja-JP.ts
translations/zh-CN/: zh-CN.ts
